# sql-data-analyst-agent

./: .env.example  .gitignore  README.md  app.py  config.py  core.py  pyproject.toml
analysis/: __init__.py  capabilities.py  executor.py  ml_runner.py  planner.py  supervised.py
evals/: chinook_questions.jsonl  northwind_questions.jsonl
tests/: test_analysis_capabilities.py  test_analysis_executor.py  test_analysis_ml_runner.py  test_analysis_planner.py  test_analysis_supervised.py  test_core.py
