[project]
name = "sql-data-analyst-agent"
version = "0.3.1"
description = "A local Text-to-SQL CLI for SQLite databases with optional dataframe result analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.99.0",
    "pydantic-settings>=2.10.0",
    "rich>=14.0.0",
    "sqlglot>=26.0.0",
    "sqlite-vec>=0.1.9",
    "typer>=0.16.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
